<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin_bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/keterangan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider1"
                        style="@style/Divider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/keterangan" />

                    <TextView
                        android:id="@+id/kromosom"
                        android:layout_below="@id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:textSize="@dimen/text_size"
                        android:textStyle="normal" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin_bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_penalty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:text="@string/hp_penalty"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider2"
                        style="@style/Divider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_penalty" />

                    <TextView
                        android:id="@+id/penalty"
                        android:layout_below="@id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:textSize="@dimen/text_size"
                        android:textStyle="normal" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin_bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_fitness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:text="@string/hp_fitness"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider3"
                        style="@style/Divider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_fitness" />

                    <TextView
                        android:id="@+id/fitness"
                        android:layout_below="@id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:textSize="@dimen/text_size"
                        android:textStyle="normal" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin_bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_harga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:text="@string/hp_total_harga"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/divider4"
                        style="@style/Divider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_harga" />

                    <TextView
                        android:id="@+id/harga"
                        android:layout_below="@id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/card_view_item_padding"
                        android:textSize="@dimen/text_size"
                        android:textStyle="normal" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_proses_lagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_primary"
            android:text="@string/btn_kembali"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_perhitungan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_primary"
            android:text="@string/btn_perhitungan"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <!--<Button-->
    <!--android:id="@+id/btn_proses"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignBottom="@+id/scrollView"-->
    <!--android:background_main="@color/primary_dark"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:text="@string/btn_proses" />-->


</RelativeLayout>